[tool.poetry]
name = "proxy-monitor"
version = "0.1.0"
description = ""
authors = ["Chanjian Zhu <daya0576@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
prometheus-client = "^0.19.0"
click = "^8.1.7"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
